Removed extraneous docs files, added block-grid and visibility classes cause I forgot. Fixed homepage image. Changed footer links to just links, not iframes. Some more stuff.

--- a/marketing/docs/presentation.css
+++ b/marketing/docs/presentation.css
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5 { font-family: "OpenSans"; font-weight: 500; }
 header .subheader { position: relative; top: -18px; }
 
 .row.display { background: #f4f4f4; margin-bottom: 10px; }
-.row.display .column, .row.display .columns { background: #e7e7e7; border: 1px solid #ddd; font-size: 11px; text-indent: 3px; padding-top: 6px; padding-bottom: 6px; }
+.row.display .column, .row.display .columns, .block-grid li { background: #e7e7e7; border: 1px solid #ddd; font-size: 11px; text-indent: 3px; padding-top: 6px; padding-bottom: 6px; }
 
 .typography h1,
 .typography h2,
