--- a/marketing/presentation.css
+++ b/marketing/presentation.css
@@ -7,6 +7,9 @@
 
 h1, h2, h3, h4, h5 { font-family: "OpenSans", "Helvetica Neue", "Helvetica", Arial, Verdana, sans-serif; font-weight: 300; }
 span.glyph { font-family: "FoundationIconsGeneralEnclosed"; }
+span.glyph.social { font-family: "FoundationIconsSocial"; }
+
+footer span.glyph { font-size: 23px; }
 
 
 #copyright { background: #3f3f3f; color: #fff; padding: 11px 0; margin-top: 44px; }
@@ -242,14 +245,26 @@ header#homepage .button:hover { background: #006582; }
 
 }
 
-/* Foundation Icons General Enclosed */
+/* Foundation Icons */
 @font-face {
     font-family: 'FoundationIconsGeneralEnclosed';
-    src: url('../fonts/foundation-icons-general-enclosed.eot');
-    src: url('../fonts/foundation-icons-general-enclosed.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/foundation-icons-general-enclosed.woff') format('woff'),
-         url('../fonts/foundation-icons-general-enclosed.ttf') format('truetype'),
-         url('../fonts/foundation-icons-general-enclosed.svg#FoundationIconsGeneralEnclosed') format('svg');
+    src: url('fonts/foundation-icons-general-enclosed.eot');
+    src: url('fonts/foundation-icons-general-enclosed.eot?#iefix') format('embedded-opentype'),
+         url('fonts/foundation-icons-general-enclosed.woff') format('woff'),
+         url('fonts/foundation-icons-general-enclosed.ttf') format('truetype'),
+         url('fonts/foundation-icons-general-enclosed.svg#FoundationIconsGeneralEnclosed') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'FoundationIconsSocial';
+    src: url('fonts/foundation-icons-social.eot');
+    src: url('fonts/foundation-icons-social.eot?#iefix') format('embedded-opentype'),
+         url('fonts/foundation-icons-social.woff') format('woff'),
+         url('fonts/foundation-icons-social.ttf') format('truetype'),
+         url('fonts/foundation-icons-social.svg#FoundationIconsGeneralEnclosed') format('svg');
     font-weight: normal;
     font-style: normal;
 
