--- a/scss/typography.scss
+++ b/scss/typography.scss
@@ -34,7 +34,7 @@
   em, i { font-style: italic; line-height: inherit; }
   strong, b { font-weight: bold; line-height: inherit; }
   small { font-size: 60%; line-height: inherit; }
-  code { font-weight: bold; background: #f4f4f4; }
+  code { font-weight: bold; background: $highlightColor; }
 
   /* Lists */
   ul, ol { font-size: ms(0); line-height: 1.6; margin-bottom: ms(1); list-style-position: outside; }
